--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="apple-touch-icon" href="/favicon-32x32.png" sizes="180x180">
+    <link rel="mask-icon" href="/maskable_icon_x192" color="#373636">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <meta name="description" content="A dictionary, a background generator, a help with wordle all at the same place, it's just meaningful.">
+    <meta name="theme-color" content="#373636">
     <title>meaningful</title>
   </head>
   <body>
